# ci-with-poetry

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
ci_with_poetry/: __init__.py
scripts/release/: add_version.sh  add_version_tag.sh  build.sh  clean.sh  finally.sh  get_latest_version_tag.py  get_version_tag.sh  infer_version_tag.py  prepare.sh  publish.sh  requirements.txt  test.sh  version.py  version.sh
scripts/release/version/: __init__.py  __main__.py
scripts/release/version/_version/: __init__.py  _config.py  _providers.py  _resolvers.py  _stages.py  _tags.py
scripts/release/version/_version/_commands/: __init__.py  _add.py  _get.py  _tag.py
tests/: __init__.py  test_release.py
tests_ci/: __init__.py  _test_add.py  fixtures.py  test_commands.py  test_providers.py  test_resolvers.py  test_tags.py  test_version.py
tests_ci/version_files/: version_comments_etc.py
